# COIL-project-2026

./: .gitignore  CMakeLists.txt  COIL_Group_11.sln  Dockerfile  README.md  README.txt
PktDef/: Packet.h  PktDef.vcxproj  PktDef.vcxproj.filters  Socket.h  main.cpp
PktDef/x64/Debug/: PktDef.exe.recipe
PktDef_Tests/: PktDef_Tests.cpp  PktDef_Tests.vcxproj  PktDef_Tests.vcxproj.filters
PktDef_Tests/x64/Debug/: PktDef_Tests.dll.recipe  PktDef_Tests.ilk  vc143.idb  vc145.idb
PktDef_Tests/x64/Debug/PktDef_Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PktDef_Tests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
public/: app.js  index.html  style.css
src/: Packet.cpp  Packet.h  RobotController.cpp  RobotController.h  Socket.cpp  Socket.h  main.cpp
